# backend/app/Http/Requests/Rucher/UpdateRucherRequest.php
@@ -24,7 +24,6 @@ class UpdateRucherRequest extends FormRequest
     {
         return [
             'name' => ['required', 'string', 'max:255'],
-            'localisation' => ['required', 'string', 'max:255'],
             'latitude' => ['required', 'numeric', 'between:-90,90'],
             'longitude' => ['required', 'numeric', 'between:-180,180'],
             'description' => ['nullable', 'string'],
